Files Updated for front-end

--- a/front-end/Structure/index.html
+++ b/front-end/Structure/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quill Share</title>
-    <link rel="shortcut icon" href="/Assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/Stylish/styles.css">
+    <link rel="shortcut icon" href="../Assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../Stylish/styles.css">
 </head>
 
 <body>
     <nav>
         <div class="logo">
-            <div class="circle"><img src="/Assets/img/quill logo.jpg" alt="Logo"></div>
+            <div class="circle"><img src="../Assets/img/quill logo.jpg" alt="Logo"></div>
             <a href="index.html">
                 <h1>Quill Share</h1>
             </a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Related to topic...">
-            <button><img src="/Assets/svg s/Search.svg" alt="Search"></button>
+            <button><img src="../Assets/svg s/Search.svg" alt="Search"></button>
         </div>
 <div class="auth-buttons">
     <button class="login-btn" onclick="toggleCard()">Login</button>
@@ -82,7 +82,7 @@
 </div>
 
                 <div class="profile-container">
-                    <img id="profile-icon" src="/Assets/svg s/Profile.svg" alt="Profile" class="profile-icon"
+                    <img id="profile-icon" src="../Assets/svg s/Profile.svg" alt="Profile" class="profile-icon"
                         onclick="toggleMenu()">
                     <div id="dropdown-menu" class="dropdown-menu">
                         <div class="card">
@@ -99,7 +99,7 @@
                                     <p class="label">Rename</p>
                                 </li>
                                 <li class="element">
-                                    <img style="filter: invert(1);" src="/Assets/svg s/Heart.svg" alt="">
+                                    <img style="filter: invert(1);" src="../Assets/svg s/Heart.svg" alt="">
                                    
                                     <a href="Save.html"><p class="label">Saved notes</p></a>
                                 </li>
@@ -166,7 +166,7 @@
             </p>
         </div>
         <div class="image-content">
-            <img src="/Assets/img/newquill.png" alt="Quill and book">
+            <img src="../Assets/img/newquill.png" alt="Quill and book">
         </div>
     </section>
     <div class="search">
@@ -174,12 +174,12 @@
 
     </div>
     <div class="category">
-        <div class="it"><a href="it.html"><img src="/Assets/img/it bg.png" alt="IT"></a></div>
-        <div class="scn"><a href="scn.html"><img src="/Assets/img/Science .png" alt="Science"></a></div>
-        <div class="mts"><a href="mts.html"><img src="/Assets/img/Maths .png" alt="Maths"></a></div>
-        <div class="bsns"><a href="bsns.html"><img src="/Assets/img/Business .png" alt="Business"></a></div>
+        <div class="it"><a href="it.html"><img src="../Assets/img/it bg.png" alt="IT"></a></div>
+        <div class="scn"><a href="scn.html"><img src="../Assets/img/Science .png" alt="Science"></a></div>
+        <div class="mts"><a href="mts.html"><img src="../Assets/img/Maths .png" alt="Maths"></a></div>
+        <div class="bsns"><a href="bsns.html"><img src="../Assets/img/Business .png" alt="Business"></a></div>
     </div>
     <footer>&copy;All rights to team Syntax Samurais</footer>
-    <script src="/JS/index.js"></script>
+    <script src="../JS/index.js"></script>
 </body>
 </html>
