--- a/front-end/Structure/save.html
+++ b/front-end/Structure/save.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saved Notes</title>
-    <link rel="stylesheet" href="/Stylish/save.css">
+    <link rel="shortcut icon" href="../Assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../Stylish/save.css">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <div class="circle"><img src="/Assets/img/quill logo.jpg" alt="Logo"></div>
+            <div class="circle"><img src="../Assets/img/quill logo.jpg" alt="Logo"></div>
             <a href="index.html">
                 <h1>Quill Share</h1>
             </a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Related to topic...">
-            <button><img src="/Assets/svg s/Search.svg" alt="Search"></button>
+            <button><img src="../Assets/svg s/Search.svg" alt="Search"></button>
         </div>
 <div class="auth-buttons">
     <button class="login-btn" onclick="toggleCard()">Login</button>
@@ -79,7 +80,7 @@
 </div>
 
                 <div class="profile-container">
-                    <img id="profile-icon" src="/Assets/svg s/Profile.svg" alt="Profile" class="profile-icon"
+                    <img id="profile-icon" src="../Assets/svg s/Profile.svg" alt="Profile" class="profile-icon"
                         onclick="toggleMenu()">
                     <div id="dropdown-menu" class="dropdown-menu">
                         <div class="card">
@@ -96,7 +97,7 @@
                                     <p class="label">Rename</p>
                                 </li>
                                 <li class="element">
-                                    <img style="filter: invert(1);" src="/Assets/svg s/Heart.svg" alt="">
+                                    <img style="filter: invert(1);" src="../Assets/svg s/Heart.svg" alt="">
                                    
                                     <a href="Save.html"><p class="label">Saved notes</p></a>
                                 </li>
@@ -149,6 +150,6 @@
             </div>
     </nav>
     
-    <script src="/JS/index.js"></script>
+    <script src="../JS/index.js"></script>
 </body>
 </html>
