--- a/front-end/Structure/scn.html
+++ b/front-end/Structure/scn.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quill Share</title>
-    <link rel="shortcut icon" href="/Assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/Stylish/scn.css">
+    <link rel="shortcut icon" href="../Assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../Stylish/scn.css">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <div class="circle"><img src="/Assets/img/quill logo.jpg" alt="Logo"></div>
+            <div class="circle"><img src="../Assets/img/quill logo.jpg" alt="Logo"></div>
             <a href="index.html">
                 <h1>Quill Share</h1>
             </a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Related to topic...">
-            <button><img src="/Assets/svg s/Search.svg" alt="Search"></button>
+            <button><img src="../Assets/svg s/Search.svg" alt="Search"></button>
         </div>
 <div class="auth-buttons">
     <button class="login-btn" onclick="toggleCard()">Login</button>
@@ -81,7 +81,7 @@
 </div>
 
                 <div class="profile-container">
-                    <img id="profile-icon" src="/Assets/svg s/Profile.svg" alt="Profile" class="profile-icon"
+                    <img id="profile-icon" src="../Assets/svg s/Profile.svg" alt="Profile" class="profile-icon"
                         onclick="toggleMenu()">
                     <div id="dropdown-menu" class="dropdown-menu">
                         <div class="card">
@@ -98,7 +98,7 @@
                                     <p class="label">Rename</p>
                                 </li>
                                 <li class="element">
-                                    <img style="filter: invert(1);" src="/Assets/svg s/Heart.svg" alt="">
+                                    <img style="filter: invert(1);" src="../Assets/svg s/Heart.svg" alt="">
                                    
                                     <a href="Save.html"><p class="label">Saved notes</p></a>
                                 </li>
@@ -150,12 +150,12 @@
                 </div>
             </div>
     </nav>
-    <div class="header"><img src="/Assets/img/Science bg.jpg" alt="Science Jpg">
-        <div class="txt"><img src="/Assets/img/Txt.png" alt="Sciece"></div>
+    <div class="header"><img src="../Assets/img/Science bg.jpg" alt="Science Jpg">
+        <div class="txt"><img src="../Assets/img/Txt.png" alt="Sciece"></div>
     </div>
     <div class="box">
         <div class="leftbar">
-            <img src="/Assets/svg s/up.svg" alt="">
+            <img src="../Assets/svg s/up.svg" alt="">
             <h2>Top Recomended</h2>
         </div>
         <div class="main">
@@ -175,5 +175,5 @@
             </table>
         </div>
     </div>
-    <script src="/JS/index.js"></script>
+    <script src="../JS/index.js"></script>
 </body></html>
