--- a/front-end/Structure/contact.html
+++ b/front-end/Structure/contact.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect with us</title>
-    <link rel="shortcut icon" href="/Assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/Stylish/contact.css">
+    <link rel="shortcut icon" href="../Assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../Stylish/contact.css">
 </head>
 
 <body>
     <nav>
         <div class="logo">
-            <div class="circle"><img src="/Assets/img/quill logo.jpg" alt="Logo"></div>
+            <div class="circle"><img src="../Assets/img/quill logo.jpg" alt="Logo"></div>
             <a href="index.html">
                 <h1>Quill Share</h1>
             </a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Related to topic...">
-            <button><img src="/Assets/svg s/Search.svg" alt="Search"></button>
+            <button><img src="../Assets/svg s/Search.svg" alt="Search"></button>
         </div>
 <div class="auth-buttons">
     <button class="login-btn" onclick="toggleCard()">Login</button>
@@ -82,7 +82,7 @@
 </div>
 
                 <div class="profile-container">
-                    <img id="profile-icon" src="/Assets/svg s/Profile.svg" alt="Profile" class="profile-icon"
+                    <img id="profile-icon" src="../Assets/svg s/Profile.svg" alt="Profile" class="profile-icon"
                         onclick="toggleMenu()">
                     <div id="dropdown-menu" class="dropdown-menu">
                         <div class="card">
@@ -99,7 +99,7 @@
                                     <p class="label">Rename</p>
                                 </li>
                                 <li class="element">
-                                    <img style="filter: invert(1);" src="/Assets/svg s/Heart.svg" alt="">
+                                    <img style="filter: invert(1);" src="../Assets/svg s/Heart.svg" alt="">
                                    
                                     <a href="Save.html"><p class="label">Saved notes</p></a>
                                 </li>
@@ -160,7 +160,7 @@
             </div>
 
             <h1>UI/UX Frontend Developer</h1>
-            <img src="/Assets/img/quill logo.jpg" alt="Mayank">
+            <img src="../Assets/img/quill logo.jpg" alt="Mayank">
             <p>
                 <b>Mayank Rawat</b></p>
                 BSc(Hon)Cybersecurity <br>
@@ -171,8 +171,8 @@
             </p>
             <div class="link">
                 <a href="https://www.linkedin.com/in/mayank-rawat-503641284/" target="_blank"><img class="l"
-                        src="/Assets/img/Linkedin.png" alt="Linkedin"></a>
-                <a href="https://github.com/mayank24000" target="_blank"><img class="g" src="/Assets/img/github.png"
+                        src="../Assets/img/Linkedin.png" alt="Linkedin"></a>
+                <a href="https://github.com/mayank24000" target="_blank"><img class="g" src="../Assets/img/github.png"
                         alt="Github"></a>
             </div>
         </div>
@@ -184,7 +184,7 @@
             </div>
 
             <h1>Devops</h1>
-            <img src="/Assets/img/quill logo.jpg" alt="Mayank">
+            <img src="../Assets/img/quill logo.jpg" alt="Mayank">
             <p>
                 <b>Kiruthika</b> <br>
                 BSc(Hon)Cybersecurity <br>
@@ -196,8 +196,8 @@
             </p>
             <div class="link">
                 <a href="https://www.linkedin.com/in/aviatrix-kiruthika/" target="_blank"><img class="l"
-                        src="/Assets/img/Linkedin.png" alt="Linkedin"></a>
-                <a href="https://github.com/aviatrixK" target="_blank"><img class="g" src="/Assets/img/github.png"
+                        src="../Assets/img/Linkedin.png" alt="Linkedin"></a>
+                <a href="https://github.com/aviatrixK" target="_blank"><img class="g" src="../Assets/img/github.png"
                         alt="Github"></a>
             </div>
         </div>
@@ -209,7 +209,7 @@
             </div>
 
             <h1>Backend Developer</h1>
-            <img src="/Assets/img/quill logo.jpg" alt="Mayank">
+            <img src="../Assets/img/quill logo.jpg" alt="Mayank">
             <p>
                 <b>Akansh Pandey</b> <br>
                 BSc(Hon)Cybersecurity <br>
@@ -219,8 +219,8 @@
             </p>
             <div class="link">
                 <a href="https://www.linkedin.com/in/akansh-pandey-81861b237?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    target="_blank"><img class="l" src="/Assets/img/Linkedin.png" alt="Linkedin"></a>
-                <a href="https://github.com/akansh024" target="_blank"><img class="g" src="/Assets/img/github.png"
+                    target="_blank"><img class="l" src="../Assets/img/Linkedin.png" alt="Linkedin"></a>
+                <a href="https://github.com/akansh024" target="_blank"><img class="g" src="../Assets/img/github.png"
                         alt="Github"></a>
             </div>
 
@@ -233,7 +233,7 @@
             </div>
 
             <h1>Database & Secuirity</h1>
-            <img src="/Assets/img/quill logo.jpg" alt="Mayank">
+            <img src="../Assets/img/quill logo.jpg" alt="Mayank">
             <p>
                <b>Muskan</b> <br>
                 BSc(Hon)Cybersecurity <br>
@@ -242,14 +242,14 @@
                 <hr>
             </p>
             <div class="link">
-                <a href="https://www.linkedin.com/in/muskan-yadav-31028632a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img class="l" src="/Assets/img/Linkedin.png" alt="Linkedin"></a>
-                <a href="https://github.com/Muskanxydv" target="_blank"><img class="g" src="/Assets/img/github.png" alt="Github" ></a>
+                <a href="https://www.linkedin.com/in/muskan-yadav-31028632a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img class="l" src="../Assets/img/Linkedin.png" alt="Linkedin"></a>
+                <a href="https://github.com/Muskanxydv" target="_blank"><img class="g" src="../Assets/img/github.png" alt="Github" ></a>
             </div>
 
         </div>
     </div>
     <footer>&copy;All rights to team Syntax Samurais</footer>
-    <script src="/JS/index.js"></script>
+    <script src="../JS/index.js"></script>
 </body>
 
 </html>
