Final hai for 15/10/2024

--- a/front-end/Structure/scn.html
+++ b/front-end/Structure/scn.html
@@ -167,10 +167,22 @@
                     <th>Rating</th>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="none"><a href="/Assets/PDFs/Software Engineering Notes.pdf" target="_blank">Motion</a></td>
+                    <td>10/10/2024</td>
+                    <td>Muskan</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td class="none"><a href="/Assets/PDFs/Android_CompleteNotes.pdf" target="_blank">Light</a></td>
+                    <td>8/9/2024</td>
+                    <td>Kiruthika</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td class="none"><a href="/Assets/PDFs/C_Complete_Notes.pdf" target="_blank">Sound</a></td>
+                    <td>9/9/2024</td>
+                    <td>Mayank</td>
+                    <td>N/A</td>
                 </tr>
             </table>
         </div>
