--- a/front-end/Structure/bsns.html
+++ b/front-end/Structure/bsns.html
@@ -167,11 +167,24 @@
                     <th>Uploded by</th>
                     <th>Rating</th>
                 </tr>
+
+                <tr >
+                    <td class="none"><a href="/Assets/PDFs/Software Engineering Notes.pdf" target="_blank">Business</a></td>
+                    <td>10/10/2024</td>
+                    <td>Akansh</td>
+                    <td>N/A</td>
+                </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="none"><a href="/Assets/PDFs/DSA_CompleteNotes.pdf" target="_blank">Something about bsiness</a></td>
+                    <td>8/9/2024</td>
+                    <td>Kiruthika</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td class="none"><a href="/Assets/PDFs/C_Complete_Notes.pdf" target="_blank">Business related anything</a></td>
+                    <td>9/9/2024</td>
+                    <td>Mayank</td>
+                    <td>N/A</td>
                 </tr>
             </table>
         </div>
