--- a/front-end/Structure/mts.html
+++ b/front-end/Structure/mts.html
@@ -168,19 +168,19 @@
                 </tr>
         
                 <tr >
-                    <td class="none"><a href="/Assets/PDFs/Software Engineering Notes.pdf" target="_blank">Trignometry</a></td>
+                    <td class="none"><a href="../Assets/PDFs/Software Engineering Notes.pdf" target="_blank">Trignometry</a></td>
                     <td>10/10/2024</td>
                     <td>Muskan</td>
                     <td>N/A</td>
                 </tr>
                 <tr>
-                    <td class="none"><a href="/Assets/PDFs/Android_CompleteNotes.pdf" target="_blank">Matrices</a></td>
+                    <td class="none"><a href="../Assets/PDFs/Android_CompleteNotes.pdf" target="_blank">Matrices</a></td>
                     <td>8/9/2024</td>
                     <td>Kiruthika</td>
                     <td>N/A</td>
                 </tr>
                 <tr>
-                    <td class="none"><a href="/Assets/PDFs/C_Complete_Notes.pdf" target="_blank">Calculus</a></td>
+                    <td class="none"><a href="../Assets/PDFs/C_Complete_Notes.pdf" target="_blank">Calculus</a></td>
                     <td>9/9/2024</td>
                     <td>Mayank</td>
                     <td>N/A</td>
