--- a/front-end/Structure/scn.html
+++ b/front-end/Structure/scn.html
@@ -98,7 +98,7 @@
                                     <p class="label">Rename</p>
                                 </li>
                                 <li class="element">
-                                    <img style="filter: invert(1);" src="../Assets/svg s/Heart.svg" alt="">
+                                    <img style="filter: invert(1);" src="../Assets/svg s/heart.svg" alt="">
                                    
                                     <a href="Save.html"><p class="label">Saved notes</p></a>
                                 </li>
